deploy/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: api-deployment
spec:
    selector:
        matchLabels:
            app: api
    template:
        metadata:
            labels:
                app: api
        spec:
            containers:
                - name: api
                  image: fabricioveronez/pedelogo-catalogo:v1.0.0
                  ports:
                      - containerPort: 80
                  imagePullPolicy: Always
