deploy/api/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: api-ingress
spec:
    rules:
        - host: veronez.net
          http:
              paths:
                  - backend:
                        serviceName: api-service
                        seervicePort: 80
